Szukajka kategorii, CRUD Task, Job do resetowania limitu użytkowników, logika do zarządzania czasem task -> user, Testy, Dokumentacja
